Opened 11 years ago

Closed 10 years ago

#11157 closed bug (fixed)

Slovenian translations are not available

Reported by: MatejHorvat Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Website/Pootle Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Slovenian translations are not available in Haiku despite being on Pootle since June. Please add them.

Change History (5)

comment:1 by anevilyak, 11 years ago

Owner: changed from nobody to nielx
Status: newassigned

comment:2 by diver, 10 years ago

Component: - GeneralWebsite/i18n.haiku-os.org

comment:3 by pulkomandy, 10 years ago

When this is done, don't forget to update AboutSystem for credits too.

comment:4 by nielx, 10 years ago

Owner: changed from nielx to pulkomandy

Slovenian will be updated starting tomorrow. Reassigning to PulkoMandy to update the AboutSystem credits.

comment:5 by pulkomandy, 10 years ago

Resolution: fixed
Status: assignedclosed

Done in hrev48446.

Note: See TracTickets for help on using tickets.