Add credits for the Slovenian translation.

Will be included starting tomorrow.
Fixes #11157.